[package]
name = "liquid-rpc-json"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
description = "JSON-enabled type structs for liquid-rpc crate."
license = "CC0-1.0"
homepage = "https://github.com/stevenroose/rust-liquid-rpc/"
repository = "https://github.com/stevenroose/rust-liquid-rpc/"
documentation = "https://docs.rs/liquid-rpc-json/"
keywords = [ "bitcoin", "liquid", "elements", "blockstream" ]
readme = "README.md"

[lib]
name = "liquid_rpc_json"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
hex = "0.3"

bitcoin = { version = "0.23", features = [ "use-serde" ] }
elements = { version = "0.12.0", features = [ "serde-feature" ] }

[dependencies.bitcoincore-rpc]
git = "https://github.com/jb55/rust-bitcoincore-rpc"
rev = "06c9e44d526b285c2218075ebb4bf539957f21f1"